# cen207-2025-2026-5-Mustafa-Yildirimm-cpp

./: 7-build-app-linux.sh  7-build-app-windows.bat  7-build-doc-windows.bat  8-build-test-windows.bat  9-clean-project.bat  CMakeLists.txt  DoxyfileLibWin  DoxyfileTestWin  README.md  build-tests-only.bat  quick-coverage.bat  run_translator_example.bat  run_translator_example.sh  test.bas  translateapp_unit_win_cobertura.xml  translator_tests_unit_win.cov  utility_tests_unit_win.cov
build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  basic_translator.sln  basic_translator.vcxproj  basic_translator.vcxproj.filters  datastructures.sln  language_translator.vcxproj  language_translator.vcxproj.filters  safechronolib.vcxproj  safechronolib.vcxproj.filters  testResults_windows.html  testResults_windows.xml  test_results_windows.log.tmpa46e6  test_results_windows.log.tmpc0531  translator.vcxproj  translator.vcxproj.filters  translatorlib.vcxproj  translatorlib.vcxproj.filters
docs/: index.md
report_doc_lib_hist_linux/: 2023-10-28_20-28-59_CoverageHistory.xml  2023-10-28_20-32-34_CoverageHistory.xml  2023-10-28_20-36-22_CoverageHistory.xml
report_doc_lib_hist_win/: 2023-10-28_19-30-26_CoverageHistory.xml  2025-10-18_17-15-49_CoverageHistory.xml  2025-10-18_17-25-02_CoverageHistory.xml  2025-10-18_17-49-18_CoverageHistory.xml  2025-10-18_17-49-49_CoverageHistory.xml  2025-10-18_17-58-03_CoverageHistory.xml  2025-10-18_17-58-24_CoverageHistory.xml  2025-10-18_18-00-39_CoverageHistory.xml  2025-10-18_18-01-08_CoverageHistory.xml  2025-10-18_18-56-43_CoverageHistory.xml  2025-10-18_18-58-48_CoverageHistory.xml  2025-10-18_19-03-14_CoverageHistory.xml  2025-10-18_19-10-21_CoverageHistory.xml  2025-10-18_21-24-11_CoverageHistory.xml  2025-10-19_15-32-50_CoverageHistory.xml  2025-10-19_15-35-54_CoverageHistory.xml  2025-10-19_16-01-25_CoverageHistory.xml  2025-10-19_18-11-34_CoverageHistory.xml  2025-10-19_18-15-46_CoverageHistory.xml  2025-10-19_18-17-51_CoverageHistory.xml  2025-10-19_18-26-03_CoverageHistory.xml  2025-10-19_18-40-01_CoverageHistory.xml  2025-10-23_18-30-29_CoverageHistory.xml  2025-10-23_18-39-20_CoverageHistory.xml  2025-10-23_18-40-04_CoverageHistory.xml  2025-10-23_18-42-47_CoverageHistory.xml  2025-10-23_19-30-36_CoverageHistory.xml  2025-10-23_19-36-37_CoverageHistory.xml  2025-10-23_19-38-28_CoverageHistory.xml  2025-10-23_19-44-23_CoverageHistory.xml  2025-10-23_19-44-47_CoverageHistory.xml  2025-10-23_19-45-13_CoverageHistory.xml  2025-10-23_19-49-42_CoverageHistory.xml  2025-10-23_19-53-21_CoverageHistory.xml  2025-10-23_19-57-55_CoverageHistory.xml  2025-10-23_20-03-43_CoverageHistory.xml  2025-10-23_20-49-28_CoverageHistory.xml  2025-10-23_20-51-07_CoverageHistory.xml  2025-10-23_22-48-48_CoverageHistory.xml  2025-10-24_00-18-56_CoverageHistory.xml  (+37 more)
report_doc_test_hist_linux/: 2023-10-28_20-29-30_CoverageHistory.xml  2023-10-28_20-33-06_CoverageHistory.xml  2023-10-28_20-36-53_CoverageHistory.xml
report_doc_test_hist_win/: 2023-10-28_19-30-27_CoverageHistory.xml  2025-10-18_17-15-50_CoverageHistory.xml  2025-10-18_17-25-03_CoverageHistory.xml  2025-10-18_17-49-19_CoverageHistory.xml  2025-10-18_17-49-50_CoverageHistory.xml  2025-10-18_17-58-03_CoverageHistory.xml  2025-10-18_17-58-25_CoverageHistory.xml  2025-10-18_18-00-39_CoverageHistory.xml  2025-10-18_18-01-09_CoverageHistory.xml  2025-10-18_18-56-44_CoverageHistory.xml  2025-10-18_18-58-49_CoverageHistory.xml  2025-10-18_19-03-15_CoverageHistory.xml  2025-10-18_19-10-22_CoverageHistory.xml  2025-10-18_21-24-11_CoverageHistory.xml  2025-10-19_15-32-51_CoverageHistory.xml  2025-10-19_15-35-55_CoverageHistory.xml  2025-10-19_16-01-26_CoverageHistory.xml  2025-10-19_18-11-35_CoverageHistory.xml  2025-10-19_18-15-47_CoverageHistory.xml  2025-10-19_18-17-52_CoverageHistory.xml  2025-10-19_18-26-04_CoverageHistory.xml  2025-10-19_18-40-03_CoverageHistory.xml  2025-10-23_18-30-30_CoverageHistory.xml  2025-10-23_18-39-21_CoverageHistory.xml  2025-10-23_18-40-05_CoverageHistory.xml  2025-10-23_18-42-48_CoverageHistory.xml  2025-10-23_19-30-37_CoverageHistory.xml  2025-10-23_19-36-38_CoverageHistory.xml  (+43 more)
src/BrowserHistory/: CMakeLists.txt
src/BrowserHistory/header/: BrowserHistory.h
src/BrowserHistory/src/: BrowserHistory.cpp
src/Heap/: CMakeLists.txt
src/Heap/header/: Heap.h
src/Heap/src/: Heap.cpp
src/TaskScheduler/: CMakeLists.txt
src/TaskScheduler/header/: TaskScheduler.h
src/TaskScheduler/src/: TaskScheduler.cpp
src/tests/: CMakeLists.txt
src/tests/DoubleLinkedList/: CMakeLists.txt  DoubleLinkedList_test.cpp
src/tests/HashTable/: CMakeLists.txt  HashTable_test.cpp
src/tests/Heap/: CMakeLists.txt  Heap_test.cpp
src/tests/SparseMatrix/: CMakeLists.txt  SparseMatrix_test.cpp
src/tests/StackQueue/: CMakeLists.txt  StackQueue_test.cpp
src/tests/Translate/: Translate_test.cpp
src/tests/XORLinkedList/: CMakeLists.txt  XORLinkedList_test.cpp
src/tests/utility/: utility_test.cpp
tests/: CMakeLists.txt  LanguageTranslator_test.cpp  test_advanced_coverage_boost.cpp  test_binary_tree.cpp  test_browser_history.cpp  test_chrono_advanced_coverage.cpp  test_chrono_coverage.cpp  test_comprehensive_edge_cases.cpp  test_doubly_linked_list.cpp  test_graph_bfs_dfs.cpp  test_hash_table.cpp  test_heap.cpp  test_language_translator_comprehensive.cpp  test_language_translator_dictionary.cpp  test_language_translator_extra.cpp  test_language_translator_history.cpp  test_language_translator_user_management.cpp  test_lexer_parser_codegen.cpp  test_math_utility.cpp  test_overflow_protection.cpp  test_safe_chrono_calculator.cpp  test_simple_coverage_boost.cpp  test_sparse_matrix.cpp  test_stack_queue.cpp  test_string_view_advanced_coverage.cpp  test_string_view_comprehensive.cpp  test_string_view_coverage.cpp  test_string_view_internal_utilities.cpp  test_translator_additional.cpp  test_translator_coverage_topoff.cpp  test_xor_linked_list.cpp
(+2029 files in other folders)
